# bank_policy_copilot

./: .env.example  .gitignore  README.md  bank_policy_rag_copilot_readme.md  docker-compose.yml  pyproject.toml
agents/: answer_agent.py  escalation_agent.py  guardrails.py  judge_agent.py  retriever_agent.py  risk_classifier.py
app/: config.py  main.py  schemas.py  ui_streamlit.py
evals/: bank_policy_eval.jsonl  metrics_report.md  run_evals.py
prompts/: answer_prompt.md  judge_prompt.md  risk_classifier_prompt.md
rag/: chunking.py  ingest.py  vector_store.py
sample_bank_docs/: business_account_opening_policy.md  complaint_handling_policy.md  kyc_checklist.md  personal_data_policy.md  retail_cards_policy.md
tests/: test_guardrails.py  test_retrieval.py  test_risk_classifier.py
utils/: audit.py
