[project]
name = "bank-policy-rag-copilot"
version = "0.1.0"
description = "Internal AI assistant for bank employees with RAG, guardrails, human review, and LLM-as-a-Judge."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "streamlit>=1.32",
    "requests>=2.31",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "agents*", "rag*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
